@@ -3,6 +3,7 @@
 	* gm2/bnf/gm2l.bnf:  reformatted to gnu standards.
 	* gm2/el/gm2-mode.el:  minor formatting change.
 	* gm2/gm2-libs/DynamicStrings.mod:  reformatted to gnu standards.
+	* gm2/gm2-compiler/ObjectFiles.def:  (New file).
 
 2018-07-14      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
